vinyl transition overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -357,6 +357,9 @@ background-image: url('../img/profshow-thmb/8.png');
 .showcase-item-mobile {
     display: none;
 }
+#buttons {
+    display: none;
+}
 
 @media (max-aspect-ratio: 1/1) {
   #vinyl {
@@ -412,6 +415,15 @@ background-image: url('../img/profshow-thmb/8.png');
         display: none;
     }
     #main {
+        height: 70vh;
         z-index: 999999;
+    }
+    #buttons {
+        display: block;
+        height: 10vh;
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
     }
 }
